// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile component should render component 1`] = `
<div
  className="row"
>
  <div>
    <div>
      <div
        className="user-image col s12 m5 l4"
      >
        <div
          className="row"
        >
          <figure
            className="col s12"
          >
            <img
              alt="John Mark"
              className="materialboxed responsive-img circle"
              id="profile-image"
              src="UseR image URL"
            />
          </figure>
        </div>
        <span
          className="uploading-image-spinner"
        >
          <div
            className="center-align"
          />
        </span>
        <div
          className="row"
        >
          <div
            className=" image-upload-button center"
          >
            <label
              className="btn-floating waves-effect waves-light
                  green"
              htmlFor="user-image"
            >
              <i
                className="material-icons small"
                data-tip="Edit Photo"
              >
                camera_alt
              </i>
            </label>
            <input
              id="user-image"
              name="user-image"
              onChange={[Function]}
              type="file"
            />
            <ReactTooltip
              insecure={true}
              resizeHide={true}
              wrapper="div"
            />
          </div>
        </div>
      </div>
      <div
        className="col s12 m5 l6 z-depth-1"
      >
        <ProfileDetails
          authenticatedUserId={1}
          currentProfileUserId={1}
          editUserProfile={[MockFunction]}
          fetchUserProfile={
            [MockFunction] {
              "calls": Array [
                Array [
                  1,
                ],
              ],
            }
          }
          handleStartEdit={[Function]}
          uploadUserImage={[MockFunction]}
          user={
            Object {
              "imageUploading": false,
              "isFetchingUserProfile": false,
              "userImageUrl": "",
              "userProfile": Object {
                "fullName": "John Mark",
                "userImage": "UseR image URL",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`UserProfile component should show message for non existing user 1`] = `
<div
  className="row"
>
  <div>
    <div
      className="center-align"
    >
      <h5>
        User does not exist
      </h5>
      <i
        className="material-icons large"
      >
        folder_open
      </i>
    </div>
  </div>
</div>
`;

exports[`UserProfile component should show spinner when loading user profile 1`] = `
<div
  className="row"
>
  <div
    className="center-align"
  >
    <Spinner
      size="big"
    />
  </div>
</div>
`;

exports[`UserProfile component should show spinner when uploading image 1`] = `
<div
  className="row"
>
  <div>
    <div>
      <div
        className="user-image col s12 m5 l4"
      >
        <div
          className="row"
        >
          <figure
            className="col s12"
          >
            <img
              alt="John Mark"
              className="materialboxed responsive-img circle"
              id="profile-image"
              src="test-file-stub"
            />
          </figure>
        </div>
        <span
          className="uploading-image-spinner"
        >
          <div
            className="center-align"
          >
            <Spinner
              size="small"
            />
          </div>
        </span>
        <div
          className="row"
        >
          <div
            className=" image-upload-button center"
          >
            <label
              className="btn-floating waves-effect waves-light
                  indigo accent-2"
              htmlFor="user-image"
            >
              <i
                className="material-icons small"
                data-tip="Edit Photo"
              >
                camera_alt
              </i>
            </label>
            <input
              id="user-image"
              name="user-image"
              onChange={[Function]}
              type="file"
            />
            <ReactTooltip
              insecure={true}
              resizeHide={true}
              wrapper="div"
            />
          </div>
        </div>
      </div>
      <div
        className="col s12 m5 l6 z-depth-1"
      >
        <ProfileDetails
          authenticatedUserId={1}
          currentProfileUserId={1}
          editUserProfile={[MockFunction]}
          fetchUserProfile={
            [MockFunction] {
              "calls": Array [
                Array [
                  1,
                ],
              ],
            }
          }
          handleStartEdit={[Function]}
          uploadUserImage={[MockFunction]}
          user={
            Object {
              "imageUploading": true,
              "isLoading": false,
              "userImageUrl": "",
              "userProfile": Object {
                "fullName": "John Mark",
                "userImage": null,
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`UserProfile component should simulate click event 1`] = `
<UserProfile
  authenticatedUserId={1}
  currentProfileUserId={1}
  editUserProfile={[MockFunction]}
  fetchUserProfile={
    [MockFunction] {
      "calls": Array [
        Array [
          1,
        ],
      ],
    }
  }
  uploadUserImage={
    [MockFunction] {
      "calls": Array [
        Array [
          FormData {
            Symbol(impl): FormDataImpl {
              "_entries": Array [
                Object {
                  "name": "file",
                  "value": "[object Object]",
                },
                Object {
                  "name": "upload_preset",
                  "value": "undefined",
                },
                Object {
                  "name": "api_key",
                  "value": "undefined",
                },
              ],
              Symbol(wrapper): [Circular],
            },
          },
        ],
      ],
    }
  }
  user={
    Object {
      "error": Object {},
      "imageUploading": false,
      "isLoading": false,
      "userImageUrl": "User new image URL",
      "userProfile": Object {
        "fullName": "John Mark",
        "userImage": "User image URL",
      },
    }
  }
>
  <div
    className="row"
  >
    <div>
      <div>
        <div
          className="user-image col s12 m5 l4"
        >
          <div
            className="row"
          >
            <figure
              className="col s12"
            >
              <img
                alt="John Mark"
                className="materialboxed responsive-img circle"
                id="profile-image"
                src="User image URL"
              />
            </figure>
          </div>
          <span
            className="uploading-image-spinner"
          >
            <div
              className="center-align"
            />
          </span>
          <div
            className="row"
          >
            <div
              className=" image-upload-button center"
            >
              <label
                className="btn-floating waves-effect waves-light
                  green"
                htmlFor="user-image"
              >
                <i
                  className="material-icons small"
                  data-tip="Edit Photo"
                >
                  camera_alt
                </i>
              </label>
              <input
                id="user-image"
                name="user-image"
                onChange={[Function]}
                type="file"
              />
              <ReactTooltip
                insecure={true}
                resizeHide={true}
                wrapper="div"
              >
                <div
                  className="__react_component_tooltip place-top type-dark "
                  data-id="tooltip"
                />
              </ReactTooltip>
            </div>
          </div>
        </div>
        <div
          className="col s12 m5 l6 z-depth-1"
        >
          <ProfileDetails
            authenticatedUserId={1}
            currentProfileUserId={1}
            editUserProfile={[MockFunction]}
            fetchUserProfile={
              [MockFunction] {
                "calls": Array [
                  Array [
                    1,
                  ],
                ],
              }
            }
            handleStartEdit={[Function]}
            uploadUserImage={
              [MockFunction] {
                "calls": Array [
                  Array [
                    FormData {
                      Symbol(impl): FormDataImpl {
                        "_entries": Array [
                          Object {
                            "name": "file",
                            "value": "[object Object]",
                          },
                          Object {
                            "name": "upload_preset",
                            "value": "undefined",
                          },
                          Object {
                            "name": "api_key",
                            "value": "undefined",
                          },
                        ],
                        Symbol(wrapper): [Circular],
                      },
                    },
                  ],
                ],
              }
            }
            user={
              Object {
                "error": Object {},
                "imageUploading": false,
                "isLoading": false,
                "userImageUrl": "User new image URL",
                "userProfile": Object {
                  "fullName": "John Mark",
                  "userImage": "User image URL",
                },
              }
            }
          >
            <div>
              <div
                className="row"
              />
              <div
                className="col s12"
              >
                <h5>
                  <i
                    className="material-icons left"
                  >
                    person
                  </i>
                  My
                   Profile
                </h5>
                <div
                  className="divider black"
                />
                <br />
                <div
                  className="row"
                  id="about_user"
                >
                  <div
                    className="row"
                    id="profile_username"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="username"
                    >
                      Username:
                    </label>
                    <div
                      className="col s9"
                      id="username"
                    />
                  </div>
                  <div
                    className="row"
                    id="profile_first_name"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="firstname"
                    >
                      First Name:
                    </label>
                    <div
                      className="col s9"
                      id="firstname"
                    />
                  </div>
                  <div
                    className="row"
                    id="profile_last_name"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="lastname"
                    >
                      Last Name:
                    </label>
                    <div
                      className="col s9"
                      id="lastname"
                    />
                  </div>
                  <div
                    className="row"
                    id="profile_email"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="email"
                    >
                      Email:
                    </label>
                    <div
                      className="col s9"
                      id="email"
                    />
                  </div>
                </div>
              </div>
              <div
                className="col s12"
              >
                <h5>
                  About 
                  Me
                </h5>
                <div
                  className="divider black"
                />
                <p
                  id="about-me"
                />
              </div>
              <div>
                <button
                  className="btn-floating waves-effect waves-light green right"
                  id="edit-btn"
                  onClick={[Function]}
                >
                  <i
                    className="material-icons left"
                    data-tip="Edit Details"
                  >
                    edit
                  </i>
                </button>
                <ReactTooltip
                  insecure={true}
                  resizeHide={true}
                  wrapper="div"
                >
                  <div
                    className="__react_component_tooltip place-top type-dark "
                    data-id="tooltip"
                  />
                </ReactTooltip>
              </div>
              <div
                className="row"
              />
            </div>
          </ProfileDetails>
        </div>
      </div>
    </div>
  </div>
</UserProfile>
`;

exports[`UserProfile component should simulate close edit profile action 1`] = `
<UserProfile
  authenticatedUserId={1}
  currentProfileUserId={1}
  editUserProfile={[MockFunction]}
  fetchUserProfile={
    [MockFunction] {
      "calls": Array [
        Array [
          1,
        ],
      ],
    }
  }
  uploadUserImage={[MockFunction]}
  user={
    Object {
      "error": Object {},
      "imageUploading": false,
      "isLoading": false,
      "userImageUrl": "User new image URL",
      "userProfile": Object {
        "fullName": "John Mark",
        "userImage": "User image URL",
      },
    }
  }
>
  <div
    className="row"
  >
    <div>
      <div>
        <div
          className="user-image col s12 m5 l4"
        >
          <div
            className="row"
          >
            <figure
              className="col s12"
            >
              <img
                alt="John Mark"
                className="materialboxed responsive-img circle"
                id="profile-image"
                src="User image URL"
              />
            </figure>
          </div>
          <span
            className="uploading-image-spinner"
          >
            <div
              className="center-align"
            />
          </span>
          <div
            className="row"
          >
            <div
              className=" image-upload-button center"
            >
              <label
                className="btn-floating waves-effect waves-light
                  green"
                htmlFor="user-image"
              >
                <i
                  className="material-icons small"
                  data-tip="Edit Photo"
                >
                  camera_alt
                </i>
              </label>
              <input
                id="user-image"
                name="user-image"
                onChange={[Function]}
                type="file"
              />
              <ReactTooltip
                insecure={true}
                resizeHide={true}
                wrapper="div"
              >
                <div
                  className="__react_component_tooltip place-top type-dark "
                  data-id="tooltip"
                />
              </ReactTooltip>
            </div>
          </div>
        </div>
        <div
          className="col s12 m5 l6 z-depth-1"
        >
          <ProfileDetails
            authenticatedUserId={1}
            currentProfileUserId={1}
            editUserProfile={[MockFunction]}
            fetchUserProfile={
              [MockFunction] {
                "calls": Array [
                  Array [
                    1,
                  ],
                ],
              }
            }
            handleStartEdit={[Function]}
            uploadUserImage={[MockFunction]}
            user={
              Object {
                "error": Object {},
                "imageUploading": false,
                "isLoading": false,
                "userImageUrl": "User new image URL",
                "userProfile": Object {
                  "fullName": "John Mark",
                  "userImage": "User image URL",
                },
              }
            }
          >
            <div>
              <div
                className="row"
              />
              <div
                className="col s12"
              >
                <h5>
                  <i
                    className="material-icons left"
                  >
                    person
                  </i>
                  My
                   Profile
                </h5>
                <div
                  className="divider black"
                />
                <br />
                <div
                  className="row"
                  id="about_user"
                >
                  <div
                    className="row"
                    id="profile_username"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="username"
                    >
                      Username:
                    </label>
                    <div
                      className="col s9"
                      id="username"
                    />
                  </div>
                  <div
                    className="row"
                    id="profile_first_name"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="firstname"
                    >
                      First Name:
                    </label>
                    <div
                      className="col s9"
                      id="firstname"
                    />
                  </div>
                  <div
                    className="row"
                    id="profile_last_name"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="lastname"
                    >
                      Last Name:
                    </label>
                    <div
                      className="col s9"
                      id="lastname"
                    />
                  </div>
                  <div
                    className="row"
                    id="profile_email"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="email"
                    >
                      Email:
                    </label>
                    <div
                      className="col s9"
                      id="email"
                    />
                  </div>
                </div>
              </div>
              <div
                className="col s12"
              >
                <h5>
                  About 
                  Me
                </h5>
                <div
                  className="divider black"
                />
                <p
                  id="about-me"
                />
              </div>
              <div>
                <button
                  className="btn-floating waves-effect waves-light green right"
                  id="edit-btn"
                  onClick={[Function]}
                >
                  <i
                    className="material-icons left"
                    data-tip="Edit Details"
                  >
                    edit
                  </i>
                </button>
                <ReactTooltip
                  insecure={true}
                  resizeHide={true}
                  wrapper="div"
                >
                  <div
                    className="__react_component_tooltip place-top type-dark "
                    data-id="tooltip"
                  />
                </ReactTooltip>
              </div>
              <div
                className="row"
              />
            </div>
          </ProfileDetails>
        </div>
      </div>
    </div>
  </div>
</UserProfile>
`;

exports[`UserProfile component should simulate edit profile click event 1`] = `
<UserProfile
  authenticatedUserId={1}
  currentProfileUserId={1}
  editUserProfile={[MockFunction]}
  fetchUserProfile={
    [MockFunction] {
      "calls": Array [
        Array [
          1,
        ],
      ],
    }
  }
  uploadUserImage={[MockFunction]}
  user={
    Object {
      "error": Object {},
      "imageUploading": false,
      "isLoading": false,
      "userImageUrl": "User new image URL",
      "userProfile": Object {
        "fullName": "John Mark",
        "userImage": "User image URL",
      },
    }
  }
>
  <div
    className="row"
  >
    <div>
      <div>
        <div
          className="user-image col s12 m5 l4"
        >
          <div
            className="row"
          >
            <figure
              className="col s12"
            >
              <img
                alt="John Mark"
                className="materialboxed responsive-img circle"
                id="profile-image"
                src="User image URL"
              />
            </figure>
          </div>
          <span
            className="uploading-image-spinner"
          >
            <div
              className="center-align"
            />
          </span>
          <div
            className="row"
          >
            <div
              className=" image-upload-button center"
            >
              <label
                className="btn-floating waves-effect waves-light
                  green"
                htmlFor="user-image"
              >
                <i
                  className="material-icons small"
                  data-tip="Edit Photo"
                >
                  camera_alt
                </i>
              </label>
              <input
                id="user-image"
                name="user-image"
                onChange={[Function]}
                type="file"
              />
              <ReactTooltip
                insecure={true}
                resizeHide={true}
                wrapper="div"
              >
                <div
                  className="__react_component_tooltip place-top type-dark "
                  data-id="tooltip"
                />
              </ReactTooltip>
            </div>
          </div>
        </div>
        <div
          className="col s12 m5 l6 z-depth-1"
        >
          <EditProfileForm
            authenticatedUserId={1}
            currentProfileUserId={1}
            editUserProfile={[MockFunction]}
            fetchUserProfile={
              [MockFunction] {
                "calls": Array [
                  Array [
                    1,
                  ],
                ],
              }
            }
            handleCancel={[Function]}
            handleProfileChange={[Function]}
            handleSubmitProfile={[Function]}
            isEditing={true}
            uploadUserImage={[MockFunction]}
            user={
              Object {
                "error": Object {},
                "imageUploading": false,
                "isLoading": false,
                "userImageUrl": "User new image URL",
                "userProfile": Object {
                  "fullName": "John Mark",
                  "userImage": "User image URL",
                },
              }
            }
            userDetails={
              Object {
                "aboutMe": undefined,
                "firstName": "JOHN",
                "lastName": undefined,
              }
            }
          >
            <div>
              <div
                className="row"
              />
              <h5>
                <i
                  className="material-icons left"
                >
                  person
                </i>
                My Profile
              </h5>
              <div
                className="divider black"
              />
              <br />
              <div
                className="row"
                id="about_user"
              >
                <TextField
                  className="validate"
                  disabled={true}
                  id="Username"
                  name="username"
                  onChange={[Function]}
                  placeholder="Username"
                  type="text"
                >
                  <div
                    className="row"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="username"
                    >
                      Username
                      :
                    </label>
                    <div
                      className="col s9"
                    >
                      <input
                        className="validate"
                        disabled={true}
                        name="username"
                        onChange={[Function]}
                        placeholder="Username"
                        type="text"
                      />
                    </div>
                  </div>
                </TextField>
                <TextField
                  className="validate"
                  id="First Name"
                  maxLength="255"
                  name="firstName"
                  onChange={[Function]}
                  placeholder="First name"
                  required={true}
                  type="text"
                >
                  <div
                    className="row"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="firstName"
                    >
                      First Name
                      :
                    </label>
                    <div
                      className="col s9"
                    >
                      <input
                        className="validate"
                        maxLength="255"
                        name="firstName"
                        onChange={[Function]}
                        placeholder="First name"
                        required={true}
                        type="text"
                      />
                    </div>
                  </div>
                </TextField>
                <TextField
                  className="validate"
                  id="Last Name"
                  maxLength="255"
                  name="lastName"
                  onChange={[Function]}
                  placeholder="Last name"
                  required={true}
                  type="text"
                >
                  <div
                    className="row"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="lastName"
                    >
                      Last Name
                      :
                    </label>
                    <div
                      className="col s9"
                    >
                      <input
                        className="validate"
                        maxLength="255"
                        name="lastName"
                        onChange={[Function]}
                        placeholder="Last name"
                        required={true}
                        type="text"
                      />
                    </div>
                  </div>
                </TextField>
                <TextField
                  disabled={true}
                  id="Email"
                  name="email"
                  onChange={[Function]}
                  placeholder="Email"
                  type="email"
                >
                  <div
                    className="row"
                  >
                    <label
                      className="col s3 black-text"
                      htmlFor="email"
                    >
                      Email
                      :
                    </label>
                    <div
                      className="col s9"
                    >
                      <input
                        disabled={true}
                        name="email"
                        onChange={[Function]}
                        placeholder="Email"
                        type="email"
                      />
                    </div>
                  </div>
                </TextField>
              </div>
              <div
                className="col s12"
              >
                <h5>
                  About Me
                </h5>
                <div
                  className="divider black"
                />
                <textarea
                  className="materialize-textarea"
                  id="aboutMe"
                  name="aboutMe"
                  onChange={[Function]}
                  placeholder="About me"
                />
              </div>
              <div
                className="row"
              >
                <div
                  className="center-align"
                />
              </div>
              <div>
                <button
                  className="btn-floating waves-effect waves-light indigo accent-2
            right"
                  disabled={false}
                  id="confirm-edit-btn"
                  onClick={[Function]}
                >
                  <i
                    className="material-icons"
                    data-tip="Save Details"
                  >
                    save
                  </i>
                </button>
                <button
                  className="btn-floating waves-effect waves-light red right"
                  disabled={false}
                  id="cancel-edit-btn"
                  onClick={[Function]}
                >
                  <i
                    className="material-icons"
                    data-tip="Cancel"
                  >
                    cancel
                  </i>
                </button>
                <ReactTooltip
                  insecure={true}
                  resizeHide={true}
                  wrapper="div"
                >
                  <div
                    className="__react_component_tooltip place-top type-dark "
                    data-id="tooltip"
                  />
                </ReactTooltip>
              </div>
              <div
                className="row"
              />
            </div>
          </EditProfileForm>
        </div>
      </div>
    </div>
  </div>
</UserProfile>
`;
